# snorlax_chat

./: .gitignore  CMakeLists.txt  Makefile  REANME.md  config.json  hello.go  main.cpp  parse_config.py  simpread-key-内含UID，请勿遗失.json  snorlax_log.hpp  test.html
ACWJ/: ACMJ.xmind
ACWJ/Parser/: Makefile  data.h  decl.h  defs.h  main.c  scan.c
ACWJ/Scanner/: Makefile  data.h  decl.h  defs.h  main.c  scan.c
C和指针/: rearrang.c
E.g/: Alist.c  Index_BF.c  Index_KMP.c  LNode.c  List_Divid.c  Matching.c  common.h  dancer_partner.c  expression_value.c  increasing.c  reverse.c
Io_Model/: LeaderFollower  LeaderFollower.cpp  alf_sync_half_async.cpp  asyn_io.cpp  blocking_io.cpp  multiplexing_io.cpp  no_blocking_io.cpp  server.cpp  signal_driven_io.cpp  test.cpp
LearnCxx/: test  tuple.cpp
LearnCxx/basics/: max1.cpp
LearnCxx/logger/: main  main.cpp  snorlax_log.cpp  snorlax_log.h  snorlax_log.md  snorlax_log.txt
LearnCxx/observer/: observer.cpp  observer.hpp  observer.md  observer.puml
LearnCxx/面试/: step_1.c++  step_2.c++  test.c++
LearnCxx/面试/基础语法/: C++_explicit.md  C++_extern_and_extern_C.md  array_vs_pointer.md  c_vs_cpp.md  const_cpp_usage.md  cpp11_features.md  cpp_list_initialization.md  cpp_lvalue_rvalue.md  cpp_move_semantics.md  cpp_move_semantics_and_perfect_forwarding.md  define_vs_const.md  final_keyword_cpp.md  (+12 more)
LearnFlask/: app.py  requirements.txt  test.html
LearnFlask/templates/: 404.html  index.html
LearnJavaScript/: test.js
LearnJavaScript/Step_2/: script_2.js  step_2.css  step_2.html
LearnJavaScript/practice/: demo_1.html  demo_2.html
LearnJavaScript/step_1/: main.js  step_1.html
LearnJavaScript/step_3/: step_3.html
LearnJavaScript/step_4/: step_4.html
LearnScrapy/: #img.py#  img.py  movies_list.ipynb  novel.py  test_selenium.py
PPT/: 第九章 第一讲  简谐运动.ppt  第十章 第一讲 机械波产生、描述和能量.ppt  第十章 第二讲 波的干涉.ppt
Tianchi/: distribut.py  graph.py  mean.py  tianchi.py  vars.py
TinyWebServer/: webserver.h
bll/: chatroom_handler.cpp  handler_factory.hpp  login_hander.cpp  login_handler.cpp  login_handler.hpp  login_message_handle.hpp  message.hpp  message_handle.hpp  message_handle_factory.hpp  message_handler.cpp  message_handler.hpp  message_paraser.hpp  message_parser.hpp  register_hander.cpp  register_handler.cpp  register_handler.hpp  register_message_handle.hpp
chatroom/: Ichatroom.hpp
conn_pool/: conn_pool.hpp
connpool/: conn_pool.hpp
dal/: chat_rooms_dao.cpp  chatroom_relations_dao.cpp  chatrooms_dao.cpp  message.cpp  message.hpp  messages.dao.cpp  messages_dao.cpp  user.hpp  user_dao.hpp  users_dao.cpp
doc/: database.md
include/: bll.hpp  conn_pool.hpp  dal.hpp  dao.hpp  smtp_client.hpp  snorlax_log.hpp  websocket.hpp
log/: snorlax_log.hpp
nvim/: init.vim  lazy-lock.json
nvim/lua/: Key-map.lua  Lazy.lua
office/: 密码学数学基础(第1章)_zzb20220905.ppt  密码学数学基础(第2章)_zzb20220919.pptx  密码学数学基础(第3章01)_zzb20220926.pptx  密码学数学基础(第3章02)_zzb20220929.pptx  数据结构-实验1-线性表的典型算法实现.doc  第九章 第二讲 简谐运动的合成.ppt
script/: init.py  init.sql  setup.sql
server/: message_paraser.hpp  websocket.cpp  websocket_server.cpp  websocket_server.hpp
snorlaxchat/: CMakeLists.txt  Makefile  README.md  client.cpp  learn_socket.html  learn_socket.md  mysql_redis.cpp  server.cpp  test  test.cpp
snorlaxchat/.cache/clangd/index/: mysql_redis.cpp.E5A4F46E3AD72A5A.idx
snorlaxchat/client/: client.html  client.js
snorlaxchat/include/: mysql.h  redis.h
snorlaxchat/server/: CMakeLists.txt  Makefile  snorlaxchat
snorlaxchat/server.back/: CMakeLists.txt  main.cpp
snorlaxchat/server.back/include/db/: db_init.h
snorlaxchat/server.back/src/mgr/: user_mgr.cpp
snorlaxchat/server/include/: websocket_server.h
snorlaxchat/server/include/db/: config.h  conn_pool.h
snorlaxchat/server/include/mgr/: msg_mgr.h  session_guard.h  user.h  user_mgr.h
snorlaxchat/server/include/ws/: ws_server.h
snorlaxchat/server/scripts/: init_db.sql
snorlaxchat/server/src/: CMakeLists.txt  Makefile  main.cpp  websocket_server.cpp  ws_server
snorlaxchat/server/src/db/: config.cpp  conn_pool.cpp  db_init.cpp
snorlaxchat/server/src/mgr/: msg_mgr.cpp  session_guard.cpp  user.cpp
snorlaxchat/server/src/ws/: ws_server.cpp
snorlaxchat/server/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  test_config  tests
snorlaxchat/server/test/Testing/Temporary/: CTestCostData.txt
snorlaxchat/server/test/db/: test_config.cpp  test_conn_pool.cpp
snorlaxchat/src/: mysql.cpp  redis.cpp  websocket_server.cpp
sql/: message.sql  user.sql
test/: bll.cpp  conn_pool.cpp  dao.cpp  run  sql.cpp  test_register_handler.cpp  test_users_dao.cpp  websocket.py
xmind/: 栈.xmind  队列.xmind
zensnorlax_blog/: .flaskenv  README.md  app.py  create_route.py  db.json  generate_route.py  init_db.py  models.py  package-lock.json  page_numbers.db  posts.json  requirements.txt
zensnorlax_blog/instance/: database.db
zensnorlax_blog/public/: index.html
zensnorlax_blog/static/: index_style.css  post_style.css
zensnorlax_blog/templates/: 2024_8_29.html  archive_posts.html  archives.html  base.html  index.html  post.html
操作系统/操作系统导论/: common.h  cpu  cpu.c  mem  mem.c  p1.c  p2.c  p3.c
数据结构/图/: ALGraph.c  AMGraph  AMGraph.c  Graph.h  Makefile  Prim.c  ShortestPath_DIJ.c  bfs_traverse.c  dfs_traverse.c  main  main.c  traverse_bfs  traverse_bfs.c  traverse_dfs  traverse_dfs.c
数据结构/排序/: bubble_sort.c  insert_sort.c  quick_sort  quick_sort.c  select_sort.c
数据结构/查找/: HashTable.c  Makefile  binary_search.c
数据结构/栈和队列/: common.h  que  que.c  stk  stk.c  stk_link.c
数据结构/树和二叉树/: CreateTree.c  ExpTree.c  ExpTree.cpp  InThreading.c  common.h  huffman.c  huffman_code.c  huffman_tree.c  huffman_tree.h
笔记/: rust_1.md  rust_2.md  rust_3.md  s.drawio  动态规划.md  未命名绘图.drawio  贪心算法.md
网络编程/: client.c  hello.c  linux网编.km  server.c
语言/Java/: TestRange.java
语言/Python/: draw.py  test.py
语言/Rust/: file.rs
语言/c/: Johnson  Johnson.c  test  test.c
语言/html/: test.html
语言/latex/: test.tex
语言/rust/ratatui-counter-app/: Cargo.toml
课程设计/: Makefile  Map.cpp  Map.h  main  main.cpp  test.csv  计科2204张智清.docx
(+69 files in other folders)
