[package]
name = "ratatui-counter-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.26.1"

[profile.release]
lto = true      # 启用链接时优化
codegen-units = 1
panic = 'abort' # 在发布模式下，使用'abort'以减小大小，但不打印panic信息

 
